--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -46,29 +46,31 @@
     <Compile Include="Assumptions.cs" />
     <Compile Include="Misc\DStopWatch.cs" />
     <Compile Include="MockUps\GameObject.cs" />
+    <Compile Include="Modules\Renderer\GraphicModules\GraphicObjectParser.cs" />
     <Compile Include="Modules\Renderer\GraphicModules\GraphicProxyTimeLineEditor.cs" />
     <Compile Include="Modules\TimeLines\Centers\CenterResource.cs" />
     <Compile Include="Modules\TimeLines\Centers\CenterTimeLine.cs" />
     <Compile Include="Modules\TimeLines\AnimationElement.cs" />
     <Compile Include="Modules\TimeLines\AnimationGroupElement.cs" />
-    <Compile Include="Modules\TimeLines\Beat.cs" />
-    <Compile Include="Modules\TimeLines\BeatGuider.cs" />
-    <Compile Include="Modules\TimeLines\EditAnimationElementType.cs" />
+    <Compile Include="Modules\TimeLines\TimeLineEditing\Beat.cs" />
+    <Compile Include="Modules\TimeLines\TimeLineEditing\BeatGuider.cs" />
+    <Compile Include="Modules\TimeLines\TimeLineEditing\EditAnimationElementType.cs" />
+    <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\ITLEPanelElement.cs" />
     <Compile Include="Modules\TimeLines\Route\AnimationGroupRoute.cs" />
     <Compile Include="Modules\TimeLines\Route\AnimationRoute.cs" />
     <Compile Include="Modules\TimeLines\Route\AnimationRouteFrame.cs" />
     <Compile Include="Modules\TimeLines\Route\AnimationRouteFrameSlider.cs" />
     <Compile Include="Modules\TimeLines\Shapes\IShape.cs" />
-    <Compile Include="Modules\TimeLines\Placement.cs" />
+    <Compile Include="Modules\TimeLines\TimeLineEditing\Placement.cs" />
     <Compile Include="Modules\TimeLines\Shapes\GraphicElementBase.cs" />
     <Compile Include="Modules\TimeLines\Shapes\SimpleCircle.cs" />
-    <Compile Include="Modules\TimeLines\TimedGraphicElement.cs" />
+    <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TimedTLEPanelElement.cs" />
     <Compile Include="Modules\TimeLines\TimeLine.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditor.cs" />
+    <Compile Include="Modules\TimeLines\TimeLineEditing\TimeLineEditor.cs" />
     <Compile Include="Modules\Renderer\IGraphicElement.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditorPanel.cs" />
-    <Compile Include="Modules\TimeLines\TLEPanelCell.cs" />
-    <Compile Include="Modules\TimeLines\TLEPanelTimeGraphicIndicator.cs" />
+    <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TLEPanel.cs" />
+    <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TLEPanelCell.cs" />
+    <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TLEPanelTimeGraphicIndicator.cs" />
     <Compile Include="Other\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\Renderer\GraphicProxy.cs" />
