--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -78,5 +78,8 @@
   <ItemGroup>
     <Folder Include="Data\Resources\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Progress.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
