--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NAudio, Version=1.8.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NAudio.1.8.5\lib\net35\NAudio.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -46,6 +49,8 @@
     <Compile Include="Assumptions.cs" />
     <Compile Include="Misc\DStopWatch.cs" />
     <Compile Include="MockUps\GameObject.cs" />
+    <Compile Include="Modules\Music\CentreSound.cs" />
+    <Compile Include="Modules\Music\WMAFileReader.cs" />
     <Compile Include="Modules\Renderer\GraphicModules\GraphicObjectParser.cs" />
     <Compile Include="Modules\Renderer\GraphicModules\GraphicProxyTimeLineEditor.cs" />
     <Compile Include="Modules\TimeLines\Centers\CenterResource.cs" />
@@ -71,15 +76,21 @@
     <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TLEPanel.cs" />
     <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TLEPanelCell.cs" />
     <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TLEPanelTimeGraphicIndicator.cs" />
+    <Compile Include="Other\NDictionary.cs" />
     <Compile Include="Other\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\Renderer\GraphicProxy.cs" />
+    <Compile Include="test.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Data\Resources\" />
+    <Folder Include="Data\Resources\Music\" />
+    <Folder Include="Data\Resources\Shapes\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Progress.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
