Test project & reorganization

--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -49,42 +49,44 @@
     <Compile Include="Assumptions.cs" />
     <Compile Include="Misc\DStopWatch.cs" />
     <Compile Include="MockUps\GameObject.cs" />
-    <Compile Include="Modules\Music\CentreSound.cs" />
-    <Compile Include="Modules\Music\WMAFileReader.cs" />
-    <Compile Include="Modules\Renderer\GraphicModules\GraphicObjectParser.cs" />
-    <Compile Include="Modules\Renderer\GraphicModules\GraphicProxyTimeLineEditor.cs" />
-    <Compile Include="Modules\TimeLines\Centers\CenterResource.cs" />
-    <Compile Include="Modules\TimeLines\Centers\CenterTimeLine.cs" />
-    <Compile Include="Modules\TimeLines\AnimationElement.cs" />
-    <Compile Include="Modules\TimeLines\AnimationGroupElement.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditing\Beat.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditing\BeatGuider.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditing\EditAnimationElementType.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\ITLEPanelElement.cs" />
-    <Compile Include="Modules\TimeLines\Route\AnimationGroupRoute.cs" />
-    <Compile Include="Modules\TimeLines\Route\AnimationRoute.cs" />
-    <Compile Include="Modules\TimeLines\Route\AnimationRouteFrame.cs" />
-    <Compile Include="Modules\TimeLines\Route\AnimationRouteFrameSlider.cs" />
-    <Compile Include="Modules\TimeLines\Shapes\IShape.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditing\Placement.cs" />
-    <Compile Include="Modules\TimeLines\Shapes\GraphicElementBase.cs" />
-    <Compile Include="Modules\TimeLines\Shapes\SimpleCircle.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TimedTLEPanelElement.cs" />
-    <Compile Include="Modules\TimeLines\TimeLine.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditing\TimeLineEditor.cs" />
-    <Compile Include="Modules\Renderer\IGraphicElement.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TLEPanel.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TLEPanelCell.cs" />
-    <Compile Include="Modules\TimeLines\TimeLineEditing\TLEPanel\TLEPanelTimeGraphicIndicator.cs" />
-    <Compile Include="Other\NDictionary.cs" />
-    <Compile Include="Other\Player.cs" />
+    <Compile Include="EngineSections\Resources\TrigonometricCache.cs" />
+    <Compile Include="EngineSections\GameGlobal.cs" />
+    <Compile Include="EngineSections\GameEnvironmentProxy\Sound\SoundManager.cs" />
+    <Compile Include="EngineSections\GameEnvironmentProxy\Sound\SoundItem.cs" />
+    <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicObjectParser.cs" />
+    <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicProxyTimeLineEditor.cs" />
+    <Compile Include="EngineSections\Resources\CenterResource.cs" />
+    <Compile Include="EngineSections\Resources\CenterTimeLine.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationElement.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationGroupElement.cs" />
+    <Compile Include="EngineSections\TimeLines\IManualUpdate.cs" />
+    <Compile Include="EngineSections\TimeLines\Shapes\TimeLineShape.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\Beat.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\BeatGuider.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\EditAnimationElementType.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanel\ITLEPanelElement.cs" />
+    <Compile Include="EngineSections\TimeLines\Route\AnimationGroupRoute.cs" />
+    <Compile Include="EngineSections\TimeLines\Route\AnimationRoute.cs" />
+    <Compile Include="EngineSections\TimeLines\Route\AnimationRouteFrame.cs" />
+    <Compile Include="EngineSections\TimeLines\Route\AnimationRouteFrameSlider.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\Placement.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanel\TimedTLEPanelElement.cs" />
+    <Compile Include="EngineSections\TimeLines\TimeLine.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TimeLineEditor.cs" />
+    <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\IGraphicElement.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanel\TLEPanel.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanel\TLEPanelCell.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanel\TLEPanelTimeGraphicIndicator.cs" />
+    <Compile Include="Misc\DDictionary.cs" />
+    <Compile Include="Scripts\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Modules\Renderer\GraphicProxy.cs" />
+    <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\GraphicProxy.cs" />
     <Compile Include="test.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\Resources\Music\" />
     <Folder Include="Data\Resources\Shapes\" />
+    <Folder Include="Data\Resources\TimeLines\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Progress.txt" />
