Further architecture modifications, Unit testing ResourceManager

--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -47,31 +47,32 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assumptions.cs" />
+    <Compile Include="EngineSections\Resources\FileAssistant.cs" />
+    <Compile Include="EngineSections\Resources\StaticHub.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\ManualUpdater.cs" />
     <Compile Include="Misc\DStopWatch.cs" />
     <Compile Include="MockUps\GameObject.cs" />
     <Compile Include="EngineSections\Resources\TrigonometricCache.cs" />
-    <Compile Include="EngineSections\GameGlobal.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Sound\SoundManager.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Sound\SoundItem.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicObjectParser.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicProxyTimeLineEditor.cs" />
-    <Compile Include="EngineSections\Resources\CenterResource.cs" />
+    <Compile Include="EngineSections\Resources\ResourceManager.cs" />
     <Compile Include="EngineSections\Resources\CenterTimeLine.cs" />
-    <Compile Include="EngineSections\TimeLines\AnimationElement.cs" />
-    <Compile Include="EngineSections\TimeLines\AnimationGroupElement.cs" />
-    <Compile Include="EngineSections\TimeLines\IManualUpdate.cs" />
-    <Compile Include="EngineSections\TimeLines\Shapes\TimeLineShape.cs" />
+    <Compile Include="EngineSections\AnimationObjects\AnimationElement.cs" />
+    <Compile Include="EngineSections\AnimationObjects\AnimationGroupElement.cs" />
+    <Compile Include="EngineSections\AnimationObjects\Shapes\TimeLineShape.cs" />
     <Compile Include="EngineSections\TimeLineEditing\Beat.cs" />
     <Compile Include="EngineSections\TimeLineEditing\BeatGuider.cs" />
     <Compile Include="EngineSections\TimeLineEditing\EditAnimationElementType.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TLEPanel\ITLEPanelElement.cs" />
-    <Compile Include="EngineSections\TimeLines\Route\AnimationGroupRoute.cs" />
-    <Compile Include="EngineSections\TimeLines\Route\AnimationRoute.cs" />
-    <Compile Include="EngineSections\TimeLines\Route\AnimationRouteFrame.cs" />
-    <Compile Include="EngineSections\TimeLines\Route\AnimationRouteFrameSlider.cs" />
+    <Compile Include="EngineSections\AnimationObjects\Route\AnimationGroupRoute.cs" />
+    <Compile Include="EngineSections\AnimationObjects\Route\AnimationRoute.cs" />
+    <Compile Include="EngineSections\AnimationObjects\Route\AnimationRouteFrame.cs" />
+    <Compile Include="EngineSections\AnimationObjects\Route\AnimationRouteFrameSlider.cs" />
     <Compile Include="EngineSections\TimeLineEditing\Placement.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TLEPanel\TimedTLEPanelElement.cs" />
-    <Compile Include="EngineSections\TimeLines\TimeLine.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TimeLine.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TimeLineEditor.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\IGraphicElement.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TLEPanel\TLEPanel.cs" />
