--- a/DogeBeats/DogeBeatsTests/DogeBeatsTests.csproj
+++ b/DogeBeats/DogeBeatsTests/DogeBeatsTests.csproj
@@ -46,6 +46,7 @@
       <HintPath>..\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -56,6 +57,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="EngineSections\AnimationObjects\AnimationElementTests.cs" />
+    <Compile Include="EngineSections\Resources\FileAssistantTests.cs" />
     <Compile Include="EngineSections\Resources\ResourceManagerTests.cs" />
     <Compile Include="EngineSections\Resources\TrigonometricCacheTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
