--- a/DogeBeats/DogeBeatsTests/DogeBeatsTests.csproj
+++ b/DogeBeats/DogeBeatsTests/DogeBeatsTests.csproj
@@ -60,7 +60,9 @@
     <Compile Include="EngineSections\AnimationObjects\AnimationElementTests.cs" />
     <Compile Include="EngineSections\Resources\FileAssistantTests.cs" />
     <Compile Include="EngineSections\Resources\ResourceManagerTests.cs" />
+    <Compile Include="EngineSections\Resources\TimeLineCentreTests.cs" />
     <Compile Include="EngineSections\Resources\TrigonometricCacheTests.cs" />
+    <Compile Include="MockObjects.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
