Centres finished & tested

--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -50,7 +50,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assumptions.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreFileBase.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreSerializationBase.cs" />
     <Compile Include="EngineSections\Resources\Centres\ICentreBase.cs" />
@@ -58,11 +57,12 @@
     <Compile Include="EngineSections\Resources\StaticHub.cs" />
     <Compile Include="EngineSections\Resources\Centres\TimeLineCentre.cs" />
     <Compile Include="EngineSections\AnimationObjects\INamedElement.cs" />
+    <Compile Include="EngineSections\Shared\IByteParsable.cs" />
     <Compile Include="EngineSections\TimeLineEditing\ManualUpdater.cs" />
     <Compile Include="Misc\DStopWatch.cs" />
     <Compile Include="MockUps\GameObject.cs" />
     <Compile Include="EngineSections\Resources\TrigonometricCache.cs" />
-    <Compile Include="EngineSections\GameEnvironmentProxy\Sound\SoundManager.cs" />
+    <Compile Include="EngineSections\GameEnvironmentProxy\Sound\ProxySoundManager.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Sound\SoundItem.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicObjectParser.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicProxyTimeLineEditor.cs" />
@@ -95,7 +95,6 @@
   <ItemGroup>
     <Folder Include="Data\Resources\Music\" />
     <Folder Include="Data\Resources\TimeLines\" />
-    <Folder Include="EngineSections\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\Resources\Shapes\Circle.png" />
