--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -50,6 +50,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EngineSections\AnimationObjects\IAnimationElement.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreFileBase.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreSerializationBase.cs" />
     <Compile Include="EngineSections\Resources\Centres\ICentreBase.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="EngineSections\Resources\Centres\TimeLineCentre.cs" />
     <Compile Include="EngineSections\AnimationObjects\INamedElement.cs" />
     <Compile Include="EngineSections\Shared\IByteParsable.cs" />
+    <Compile Include="EngineSections\Shared\ManualUpdaterParser.cs" />
     <Compile Include="EngineSections\TimeLineEditing\ManualUpdater.cs" />
     <Compile Include="Misc\DStopWatch.cs" />
     <Compile Include="MockUps\GameObject.cs" />
@@ -67,9 +69,9 @@
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicObjectParser.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicProxyTimeLineEditor.cs" />
     <Compile Include="EngineSections\Resources\ResourceManager.cs" />
-    <Compile Include="EngineSections\AnimationObjects\AnimationElement.cs" />
+    <Compile Include="EngineSections\AnimationObjects\AnimationSingleElement.cs" />
     <Compile Include="EngineSections\AnimationObjects\AnimationGroupElement.cs" />
-    <Compile Include="EngineSections\AnimationObjects\Shapes\TimeLineShape.cs" />
+    <Compile Include="EngineSections\AnimationObjects\Shapes\AnimationElementShape.cs" />
     <Compile Include="EngineSections\TimeLineEditing\Beat.cs" />
     <Compile Include="EngineSections\TimeLineEditing\BeatGuider.cs" />
     <Compile Include="EngineSections\TimeLineEditing\EditAnimationElementType.cs" />
