--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -57,8 +57,9 @@
     <Compile Include="EngineSections\Resources\FileAssistant.cs" />
     <Compile Include="EngineSections\Resources\StaticHub.cs" />
     <Compile Include="EngineSections\Resources\Centres\TimeLineCentre.cs" />
-    <Compile Include="EngineSections\AnimationObjects\INamedElement.cs" />
+    <Compile Include="EngineSections\Shared\INamedElement.cs" />
     <Compile Include="EngineSections\Shared\IByteParsable.cs" />
+    <Compile Include="EngineSections\Shared\ImageItem.cs" />
     <Compile Include="EngineSections\Shared\ManualUpdaterParser.cs" />
     <Compile Include="EngineSections\TimeLineEditing\ManualUpdater.cs" />
     <Compile Include="Misc\DStopWatch.cs" />
@@ -94,7 +95,9 @@
     <Compile Include="test.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Data\Resources\Images\" />
     <Folder Include="Data\Resources\Music\" />
+    <Folder Include="Data\Resources\Sounds\" />
     <Folder Include="Data\Resources\TimeLines\" />
   </ItemGroup>
   <ItemGroup>
