--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -50,7 +50,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EngineSections\AnimationObjects\IAnimationElement.cs" />
+    <Compile Include="EngineSections\TimeLine\AnimationObjects\IAnimationElement.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreFileBase.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreSerializationBase.cs" />
     <Compile Include="EngineSections\Resources\Centres\ICentreBase.cs" />
@@ -61,7 +61,6 @@
     <Compile Include="EngineSections\Shared\IByteParsable.cs" />
     <Compile Include="EngineSections\Shared\ImageItem.cs" />
     <Compile Include="EngineSections\Shared\ManualUpdaterParser.cs" />
-    <Compile Include="EngineSections\TimeLineEditing\ManualUpdater.cs" />
     <Compile Include="Misc\DStopWatch.cs" />
     <Compile Include="MockUps\GameObject.cs" />
     <Compile Include="EngineSections\Resources\TrigonometricCache.cs" />
@@ -70,19 +69,18 @@
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicObjectParser.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicProxyTimeLineEditor.cs" />
     <Compile Include="EngineSections\Resources\ResourceManager.cs" />
-    <Compile Include="EngineSections\AnimationObjects\AnimationSingleElement.cs" />
-    <Compile Include="EngineSections\AnimationObjects\AnimationGroupElement.cs" />
-    <Compile Include="EngineSections\AnimationObjects\Shapes\AnimationElementShape.cs" />
-    <Compile Include="EngineSections\TimeLineEditing\Beat.cs" />
-    <Compile Include="EngineSections\TimeLineEditing\BeatGuider.cs" />
+    <Compile Include="EngineSections\TimeLine\AnimationObjects\AnimationSingleElement.cs" />
+    <Compile Include="EngineSections\TimeLine\AnimationObjects\AnimationGroupElement.cs" />
+    <Compile Include="EngineSections\TimeLine\AnimationObjects\Shapes\AnimationElementShape.cs" />
+    <Compile Include="EngineSections\TimeLine\Beat.cs" />
+    <Compile Include="EngineSections\TimeLine\BeatGuide.cs" />
     <Compile Include="EngineSections\TimeLineEditing\EditAnimationElementType.cs" />
-    <Compile Include="EngineSections\TimeLineEditing\TLEPanel\ITLEPanelElement.cs" />
-    <Compile Include="EngineSections\AnimationObjects\Route\AnimationRoute.cs" />
-    <Compile Include="EngineSections\AnimationObjects\Route\AnimationRouteFrame.cs" />
-    <Compile Include="EngineSections\AnimationObjects\Route\AnimationRouteFrameSlider.cs" />
-    <Compile Include="EngineSections\TimeLineEditing\Placement.cs" />
-    <Compile Include="EngineSections\TimeLineEditing\TLEPanel\TimedTLEPanelElement.cs" />
-    <Compile Include="EngineSections\TimeLineEditing\TimeLine.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanel\ITLEPanelCellElement.cs" />
+    <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRoute.cs" />
+    <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRouteFrame.cs" />
+    <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRouteFrameSlider.cs" />
+    <Compile Include="EngineSections\Shared\Placement.cs" />
+    <Compile Include="EngineSections\TimeLine\TimeLine.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TimeLineEditor.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\IGraphicElement.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TLEPanel\TLEPanel.cs" />
