[Compillable] AnimationRoute - Unit tests, All tests passing, TimeLine serialization issue fixed

--- a/DogeBeats/DogeBeatsTests/DogeBeatsTests.csproj
+++ b/DogeBeats/DogeBeatsTests/DogeBeatsTests.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="EngineSections\Resources\Centres\CentreFileBaseTests.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreSerializationBaseTests.cs" />
+    <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRouteTests.cs" />
     <Compile Include="FileTestHelper.cs" />
     <Compile Include="EngineSections\AnimationObjects\AnimationElementTests.cs" />
     <Compile Include="EngineSections\Resources\FileAssistantTests.cs" />
@@ -69,12 +70,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Data\Resources\TestSerialization\test AnimationELement1.json" />
-    <None Include="Data\Resources\TestSerialization\test AnimationELement2.json" />
-    <None Include="Data\Resources\TestSerialization\TestSerialization.json" />
-    <None Include="Data\Resources\TimeLines\TEstLimeLint1.json" />
-    <None Include="Data\Resources\TimeLines\testlimelint1.xml.json" />
-    <None Include="Data\Resources\TimeLines\TestName.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -83,15 +78,7 @@
       <Name>DogeBeats</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\Resources\Music\" />
-    <Folder Include="Data\Resources\Shapes\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Data\Resources\Images\test.bmp" />
-    <Content Include="Data\Resources\Nested1\Nested2\Nested3\NestTest2.txt" />
-    <Content Include="Data\Resources\Nested1\Nested2\NestTest1.txt" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
