[Compilable] BeatGuider UnitTests, AnimationElementSingleElement & Group Unit Tests, ManualUpdaterParser update, CentreSerializationBase new methods CreateElement, RenameElement

--- a/DogeBeats/DogeBeatsTests/DogeBeatsTests.csproj
+++ b/DogeBeats/DogeBeatsTests/DogeBeatsTests.csproj
@@ -59,7 +59,10 @@
   <ItemGroup>
     <Compile Include="EngineSections\Resources\Centres\CentreFileBaseTests.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreSerializationBaseTests.cs" />
+    <Compile Include="EngineSections\TimeLine\AnimationObjects\AnimationGroupElementTests.cs" />
+    <Compile Include="EngineSections\TimeLine\AnimationObjects\AnimationSingleElementTests.cs" />
     <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRouteTests.cs" />
+    <Compile Include="EngineSections\TimeLine\BeatGuideTests.cs" />
     <Compile Include="FileTestHelper.cs" />
     <Compile Include="EngineSections\AnimationObjects\AnimationElementTests.cs" />
     <Compile Include="EngineSections\Resources\FileAssistantTests.cs" />
