--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -50,6 +50,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EngineSections\Shared\NesuException.cs" />
     <Compile Include="EngineSections\TimeLine\AnimationObjects\IAnimationElement.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreFileBase.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreSerializationBase.cs" />
