[Compilable] Moving to XUnit Testing framework (Stackoverflow exception detection)

--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -80,7 +80,7 @@
     <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRoute.cs" />
     <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRouteFrame.cs" />
     <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRouteFrameSlider.cs" />
-    <Compile Include="EngineSections\Shared\Placement.cs" />
+    <Compile Include="EngineSections\TimeLine\Placement.cs" />
     <Compile Include="EngineSections\TimeLine\TimeLine.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TimeLineEditor.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\IGraphicElement.cs" />
