[Compilable] TLEGraphicTimeIndicator method review & update with EnvironmentVariables on Static Hub.

--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -50,6 +50,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EngineSections\Resources\EnvironmentVariables.cs" />
     <Compile Include="EngineSections\Shared\NesuException.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TLEPanels\TimeLineEditorPanelHub.cs" />
     <Compile Include="EngineSections\TimeLine\AnimationObjects\IAnimationElement.cs" />
