[Compillable, green] All Panel mechanisms are finished.

--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -52,7 +52,7 @@
   <ItemGroup>
     <Compile Include="EngineSections\Resources\EnvironmentVariables.cs" />
     <Compile Include="EngineSections\Shared\NesuException.cs" />
-    <Compile Include="EngineSections\TimeLineEditing\TLEPanels\TimeLineEditorPanelHub.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanels\TLEPanelHub.cs" />
     <Compile Include="EngineSections\TimeLine\AnimationObjects\IAnimationElement.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreFileBase.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreSerializationBase.cs" />
