[Compillable, green] Excluding PanelCellManagement into separate classes, Setting default values for TLEPanelElements

--- a/DogeBeats/DogeBeatsCore/DogeBeats.csproj
+++ b/DogeBeats/DogeBeatsCore/DogeBeats.csproj
@@ -52,8 +52,13 @@
   <ItemGroup>
     <Compile Include="EngineSections\Resources\EnvironmentVariables.cs" />
     <Compile Include="EngineSections\Shared\NesuException.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanelCellElementManagement\ITLEPanelCellElementManagement.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanelCellElementManagement\TLEPCEManagementAnimationElement.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanelCellElementManagement\TLEPCEManagementAnimationRoute.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanelCellElementManagement\TLEPCEManagementBeat.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TLEPanels\TLEPanelHub.cs" />
-    <Compile Include="EngineSections\TimeLine\AnimationObjects\IAnimationElement.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanels\TLEPanelNames.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationObjects\IAnimationElement.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreFileBase.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreSerializationBase.cs" />
     <Compile Include="EngineSections\Resources\Centres\ICentreBase.cs" />
@@ -73,18 +78,18 @@
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicObjectParser.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\RendererElements\GraphicProxyTimeLineEditor.cs" />
     <Compile Include="EngineSections\Resources\ResourceManager.cs" />
-    <Compile Include="EngineSections\TimeLine\AnimationObjects\AnimationSingleElement.cs" />
-    <Compile Include="EngineSections\TimeLine\AnimationObjects\AnimationGroupElement.cs" />
-    <Compile Include="EngineSections\TimeLine\AnimationObjects\Shapes\AnimationElementShape.cs" />
-    <Compile Include="EngineSections\TimeLine\Beat.cs" />
-    <Compile Include="EngineSections\TimeLine\BeatGuide.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationObjects\AnimationSingleElement.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationObjects\AnimationGroupElement.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationObjects\Shapes\AnimationElementShape.cs" />
+    <Compile Include="EngineSections\TimeLines\Beat.cs" />
+    <Compile Include="EngineSections\TimeLines\BeatGuide.cs" />
     <Compile Include="EngineSections\TimeLineEditing\EditAnimationElementType.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TLEPanels\ITLEPanelCellElement.cs" />
-    <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRoute.cs" />
-    <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRouteFrame.cs" />
-    <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRouteFrameSlider.cs" />
-    <Compile Include="EngineSections\TimeLine\Placement.cs" />
-    <Compile Include="EngineSections\TimeLine\TimeLine.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationObjects\Route\AnimationRoute.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationObjects\Route\AnimationRouteFrame.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationObjects\Route\AnimationRouteFrameSlider.cs" />
+    <Compile Include="EngineSections\TimeLines\Placement.cs" />
+    <Compile Include="EngineSections\TimeLines\TimeLine.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TimeLineEditor.cs" />
     <Compile Include="EngineSections\GameEnvironmentProxy\Renderer\IGraphicElement.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TLEPanels\TLEPanel.cs" />
