[Compillable, Red] 56/127 Red tests, 4 done. Added missing Red Tests. TLE fixes.

--- a/DogeBeats/DogeBeatsTests/DogeBeatsTests.csproj
+++ b/DogeBeats/DogeBeatsTests/DogeBeatsTests.csproj
@@ -68,12 +68,17 @@
     <Compile Include="EngineSections\Resources\Centres\CentreFileBaseTests.cs" />
     <Compile Include="EngineSections\Resources\Centres\CentreSerializationBaseTests.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TimeLineEditorTests.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanelCellElementManagement\TLEPCEManagementAnimationElementTests.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanelCellElementManagement\TLEPCEManagementAnimationRouteTests.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanelCellElementManagement\TLEPCEManagementBeatTests.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanels\TLEPanelHubTests.cs" />
     <Compile Include="EngineSections\TimeLineEditing\TLEPanels\TLEPanelTests.cs" />
-    <Compile Include="EngineSections\TimeLine\AnimationObjects\AnimationGroupElementTests.cs" />
-    <Compile Include="EngineSections\TimeLine\AnimationObjects\AnimationSingleElementTests.cs" />
-    <Compile Include="EngineSections\TimeLine\AnimationObjects\Route\AnimationRouteTests.cs" />
-    <Compile Include="EngineSections\TimeLine\BeatGuideTests.cs" />
-    <Compile Include="EngineSections\TimeLine\TimeLineTests.cs" />
+    <Compile Include="EngineSections\TimeLineEditing\TLEPanels\TLEPanelTimeGraphicIndicatorTests.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationObjects\AnimationGroupElementTests.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationObjects\AnimationSingleElementTests.cs" />
+    <Compile Include="EngineSections\TimeLines\AnimationObjects\Route\AnimationRouteTests.cs" />
+    <Compile Include="EngineSections\TimeLines\BeatGuideTests.cs" />
+    <Compile Include="EngineSections\TimeLines\TimeLineTests.cs" />
     <Compile Include="FileTestHelper.cs" />
     <Compile Include="EngineSections\Resources\FileAssistantTests.cs" />
     <Compile Include="EngineSections\Resources\ResourceManagerTests.cs" />
